# ShikenMatrix

./: .gitignore  Cargo.toml  README.md  build-all.sh  build.rs  eslint.config.ts  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  shikenmatrix.h  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/commands/: commit.md
.github/workflows/: build.yml  release.yml
macos-ui/: README.md  build-rust.sh
macos-ui/rust-lib/: libshikenmatrix.dylib  shikenmatrix.h
src/: App.vue  app.vue  global.d.ts  lib.rs  main.rs  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/libs/: commands.rs  create_config.rs  mod.rs  report.rs
src-tauri/src/modules/: files_converter.rs  get_config.rs  get_media.rs  get_processes.rs  get_smtc.rs  logs.rs  mod.rs  requests.rs  upload_images.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: media.rs
src-tauri/src/platform/windows/: window.rs
src-tauri/src/services/: config.rs  reporter.rs
src/assets/: main.css  webview-fixes.css
src/components/: ForegroundWidget.vue  MediaWidget.vue  SettingsPanel.vue  Sidebar.vue
src/ffi/: accessibility.rs  config.rs  mod.rs  reporter.rs  types.rs  version.rs
src/layouts/: Home.vue
src/pages/: index.vue
src/platform/: mod.rs
src/plugins/: webview-compat.client.ts
src/services/: config.rs  mod.rs  reporter.rs
src/stores/: eventStore.ts  logsStore.ts
src/utils/: webview-compat.ts
src/views/: index.vue  router.ts
win-ui/: .gitignore  pre-build.ps1
win-ui/ShikenMatrix/: App.xaml  App.xaml.cs  MainWindow.xaml  app.manifest  (+4 more)
(+35 files in other folders)
