[package]
name = "kizuna"
version = "0.1.0"
description = "Kizuna"
authors = [ "TiaNXianG" ]
edition = "2021"

[lib]
name = "kizuna_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[features]
cargo-clippy = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dependencies]
reqwest = { version = "0.12.15", features = [
  "blocking",
  "json",
  "multipart"
] }
tauri = { version = "2.5.1", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
tauri-plugin-shell = "2.2.1"
tokio = { version = "1.44.2", features = [ "full" ] }
serde_yaml = "0.9.33"
serde_derive = "1.0.219"
sha1 = "0.10.6"
chrono = "0.4.41"
base64 = "0.22.1"
image = { version = "0.25.6", features = [ "webp" ] }
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
lazy_static = "1.5.0"
tauri-utils = "2.4.0"
rust-s3 = "0.35.1"
sha2 = "0.10.8"

# windows-only dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "winuser",
  "processthreadsapi",
  "psapi",
  "handleapi",
  "winnt",
  "shellapi",
  "commctrl",
  "libloaderapi",
] }
windows = { version = "0.61.1", features = [
  "Media_Control",
  "Foundation",
  "Media_Playback",
  "Storage",
  "Storage_Streams",
] }

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
core-graphics = "0.24.0"
objc = "0.2.7"
